fix(css): change align-items property value from 'start/end' to 'flex-start/flex-end'

--- a/src/styles/pages/DoneRecipes.css
+++ b/src/styles/pages/DoneRecipes.css
@@ -33,7 +33,7 @@
 }
 
 .done-recipes .done-recipe-card .recipe-name {
-  align-items: end;
+  align-items: flex-end;
   color: #584e28;
   display: flex;
   grid-column: 2;
@@ -70,7 +70,7 @@
 }
 
 .done-recipes .done-recipe-card .buttons-share-and-favorite {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   grid-column: 2 / span 2;
   grid-row: 5;
